--- a/src/app/ng-selectio/ng-selectio.css
+++ b/src/app/ng-selectio/ng-selectio.css
@@ -1,5 +1,20 @@
 .ngs {
-  background-color: black;
+  background-color: #fff;
+  border-color: #d9d9d9 #ccc #b3b3b3;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  /*color: #333;*/
+  /*cursor: default;*/
+  /*border-spacing: 0;*/
+  /*border-collapse: separate;*/
+  /*height: 36px;*/
+  /*outline: none;*/
+  /*overflow: hidden;*/
+  width: 40%;
+}
+
+.dropdown-cont {
+  background-color: aliceblue;
 }
 
 
