--- a/docs/styles.bundle.css
+++ b/docs/styles.bundle.css
@@ -1,1 +1,1 @@
-.ngs{background-color:#000}
+.ngs{background-color:#fff;border-color:#d9d9d9 #ccc #b3b3b3;border-radius:4px;border:1px solid #ccc;width:40%}.dropdown-cont{background-color:#f0f8ff}
