--- a/src/app/examples-page/examples-page.component.html
+++ b/src/app/examples-page/examples-page.component.html
@@ -1,54 +1,56 @@
-<p>Simple select array of strings</p>
-<ng-selectio
-  [$data]="$stringArray"
-  [selectionEmptyRenderer]="noDataRenderer"
-  [dropdownDisabledItemMapper]="disabledItem"
-  [allowClear]="true"
-></ng-selectio>
-<p>Simple select array of objects</p>
-<ng-selectio
-  [$data]="$objectArray"
-  [dropdownItemRenderer]="{template:renderCountry, bypassSecurityTrustHtml:true}"
-  [selectionItemRenderer]="{template:renderCountry, bypassSecurityTrustHtml:true}"
-  [selectionDefaultMapper]="selectionDefaultMapper"
-  (onSelect)="onSelectCountry($event)"
-></ng-selectio>
-<p>Simple select array of strings with search</p>
-<ng-selectio
-  [$data]="$stringArray"
-  [search]="true"
-  (onSearch)="onSearchString($event)"
-></ng-selectio>
-<p>Simple select array of strings with search and autocomplete</p>
-<ng-selectio
-  [$data]="$stringArray"
-  [search]="true"
-  [autocomplete]="true"
-  (onSearch)="onSearchString($event)"
-></ng-selectio>
-<p>remote data select with search and pagination</p>
-<ng-selectio
-  [$data]="$users"
-  [$appendData]="$appendUsers"
-  [dropdownItemRenderer]="renderItem"
-  [selectionItemRenderer]="renderItem"
-  [selectionMode]="'multiple'"
-  [search]="true"
-  [allowClear]="true"
-  [pagination]="true"
-  [paginationDelay]="500"
-  (onSearch)="onSearch($event)"
-  (onNextPage)="onNextPage($event)"
-></ng-selectio>
+<div id="examples-cont">
+  <h2>Simple select array of strings</h2>
+  <ng-selectio
+    [$data]="$stringArray"
+    [selectionEmptyRenderer]="noDataRenderer"
+    [dropdownDisabledItemMapper]="disabledItem"
+    [allowClear]="true"
+  ></ng-selectio>
+  <h2>Simple select array of objects</h2>
+  <ng-selectio
+    [$data]="$objectArray"
+    [dropdownItemRenderer]="{template:renderCountry, bypassSecurityTrustHtml:true}"
+    [selectionItemRenderer]="{template:renderCountry, bypassSecurityTrustHtml:true}"
+    [selectionDefaultMapper]="selectionDefaultMapper"
+    (onSelect)="onSelectCountry($event)"
+  ></ng-selectio>
+  <h2>Simple select array of strings with search</h2>
+  <ng-selectio
+    [$data]="$stringArray"
+    [search]="true"
+    (onSearch)="onSearchString($event)"
+  ></ng-selectio>
+  <h2>Simple select array of strings with search and autocomplete</h2>
+  <ng-selectio
+    [$data]="$stringArray"
+    [search]="true"
+    [autocomplete]="true"
+    (onSearch)="onSearchString($event)"
+  ></ng-selectio>
+  <h2>Remote data select with search and pagination</h2>
+  <ng-selectio
+    [$data]="$users"
+    [$appendData]="$appendUsers"
+    [dropdownItemRenderer]="renderItem"
+    [selectionItemRenderer]="renderItem"
+    [selectionMode]="'multiple'"
+    [search]="true"
+    [allowClear]="true"
+    [pagination]="true"
+    [paginationDelay]="500"
+    (onSearch)="onSearch($event)"
+    (onNextPage)="onNextPage($event)"
+  ></ng-selectio>
 
-<p>inside form</p>
-<div>
+  <h2>ngmodel</h2>
+  <div>
     <ng-selectio [(ngModel)]="itemArray"
-      [$data]="$stringArray"
-      [selectionEmptyRenderer]="noDataRenderer"
-      [dropdownDisabledItemMapper]="disabledItem"
-      [allowClear]="true"
+                 [$data]="$stringArray"
+                 [selectionEmptyRenderer]="noDataRenderer"
+                 [dropdownDisabledItemMapper]="disabledItem"
+                 [allowClear]="true"
     >
     </ng-selectio>
-  <div>{{itemArray}}</div>
+    <div>{{itemArray}}</div>
+  </div>
 </div>
