--- a/src/app/ng-selectio/ng-selectio.css
+++ b/src/app/ng-selectio/ng-selectio.css
@@ -1,34 +1,56 @@
 .ngs {
-  background-color: #fff;
-  border-color: #d9d9d9 #ccc #b3b3b3;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  /*color: #333;*/
-  /*cursor: default;*/
-  /*border-spacing: 0;*/
-  /*border-collapse: separate;*/
-  /*height: 36px;*/
-  /*outline: none;*/
-  /*overflow: hidden;*/
   width: 40%;
+  background-color: white;
+}
+.ngs:focus {
+  outline: none;
+}
+.ngs:focus .selection-wrapper {
+  border: 1px solid #b3b3b3;
+  border-radius: 4px;
+}
+.ngs .selection-wrapper {
+  background-color: #fff;
+  border: 1px solid;
+  border-radius: 4px;
+  border-color: #d9d9d9 #ccc #b3b3b3;
+}
+.ngs.expanded .selection-wrapper {
+  border-radius: 4px 4px 0 0;
+  border-bottom: 0;
+}
+.ngs span.delete {
+  cursor: pointer;
 }
 
+
 .dropdown-wrapper .dropdown {
-  background-color: aliceblue;
+  margin-top: 0;
 }
-.dropdown-wrapper li.active {
+.dropdown-wrapper .dropdown > div {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 0 0 4px 4px;
+}
+.dropdown-wrapper .dropdown li {
+  padding: 5px;
+}
+.dropdown-wrapper .dropdown li.active {
   background-color: bisque;
 }
-.dropdown-wrapper li.selected {
+.dropdown-wrapper .dropdown li.selected {
   background-color: grey;
 }
-.dropdown-wrapper li.disabled {
+.dropdown-wrapper .dropdown li.disabled {
   color: gray;
 }
 
 
+.selection {
+  padding: 5px;
+}
 .selection .selected {
-  background-color: blueviolet;
+  background-color: #cccccc;
 }
 .selection.disabled {
   /*styles for disabled selection*/
@@ -52,23 +74,43 @@
   display: inline-block;
   position: absolute;
   right: 10px;
-  top: calc(50% - 8px / 2);
-  border: 8px solid gray;
+  top: calc(50% - 5px / 2);
+  border: 5px solid gray;
   border-bottom-width: 0;
   border-left-color: transparent;
   border-right-color: transparent;
 }
 .selection span.arrow.up-arrow {
-  border: 8px solid gray;
+  border: 5px solid gray;
   border-top-width: 0;
   border-left-color: transparent;
   border-right-color: transparent;
 }
 
-
-.search.autocomplete input {
-  border: none;
+.search {
+  padding: 4px 8px 4px 4px;
 }
-.search.autocomplete input:focus {
+.search input {
+  width: 100%;
+}
+
+
+.ngs.autocomplete .selection-wrapper {
+  cursor: text;
+}
+.ngs.autocomplete .search input {
+  border: none;
+  width: 5px;
+}
+.ngs.autocomplete .search input:focus {
   outline: none;
 }
+.ngs.autocomplete .selection {
+  padding: 0 0 0 4px;
+}
+.ngs.autocomplete .search {
+  padding: 4px 0 4px 0;
+  margin-left: -2px;
+}
+
+
