--- a/src/app/ng-selectio/ng-selectio.css
+++ b/src/app/ng-selectio/ng-selectio.css
@@ -1,5 +1,4 @@
 .ngs {
-  width: 40%;
   background-color: white;
 }
 .ngs:focus {
@@ -15,62 +14,73 @@
   border-radius: 4px;
   border-color: #d9d9d9 #ccc #b3b3b3;
 }
-.ngs.expanded .selection-wrapper {
+.ngs.expanded:not(.open-up) .selection-wrapper {
   border-radius: 4px 4px 0 0;
   border-bottom: 0;
 }
-.ngs span.delete {
+.ngs.expanded.open-up .selection-wrapper {
+  border-radius: 0 0 4px 4px;
+  border-top: 0;
+}
+.ngs span.clear {
   cursor: pointer;
 }
 
 
-.dropdown-wrapper .dropdown {
+.ngs .dropdown-wrapper .dropdown {
   margin-top: 0;
 }
-.dropdown-wrapper .dropdown > div {
+.ngs .dropdown-wrapper .dropdown > div {
   background-color: white;
+}
+.ngs:not(.open-up) .dropdown-wrapper .dropdown > div {
   border: 1px solid #ccc;
   border-radius: 0 0 4px 4px;
 }
-.dropdown-wrapper .dropdown li {
+.ngs.open-up .dropdown-wrapper .dropdown > div {
+  border: 1px solid #ccc;
+  border-radius: 4px 4px 0 0;
+}
+.ngs .dropdown-wrapper .dropdown li {
   padding: 5px;
 }
-.dropdown-wrapper .dropdown li.active {
+.ngs .dropdown-wrapper .dropdown li.active {
   background-color: bisque;
+  cursor: pointer;
 }
-.dropdown-wrapper .dropdown li.selected {
+.ngs .dropdown-wrapper .dropdown li.selected {
   background-color: grey;
 }
-.dropdown-wrapper .dropdown li.disabled {
+.ngs .dropdown-wrapper .dropdown li.disabled {
   color: gray;
 }
 
 
-.selection {
+.ngs .selection {
   padding: 5px;
 }
-.selection .selected {
+.ngs .selection .selected {
   background-color: #cccccc;
 }
-.selection.disabled {
+.ngs .selection.disabled {
   /*styles for disabled selection*/
 }
-.selection .empty {
+.ngs .selection .empty {
   /*styles for span with empty selection*/
 }
-.selection .single {
+.ngs .selection .single {
   /*single selection mode*/
 }
-.selection .multiple {
+.ngs .selection .multiple {
   /*single selection mode*/
 }
-.selection .single.deletable {
+.ngs .selection .single.deletable {
 
 }
-.selection .multiple.deletable {
+.ngs .selection .multiple.deletable {
 
 }
-.selection span.arrow {
+.ngs .selection span.arrow {
   display: inline-block;
   position: absolute;
   right: 10px;
@@ -80,17 +90,17 @@
   border-left-color: transparent;
   border-right-color: transparent;
 }
-.selection span.arrow.up-arrow {
+.ngs .selection span.arrow.up-arrow {
   border: 5px solid gray;
   border-top-width: 0;
   border-left-color: transparent;
   border-right-color: transparent;
 }
 
-.search {
+.ngs .search {
   padding: 4px 8px 4px 4px;
 }
-.search input {
+.ngs .search input {
   width: 100%;
 }
 
@@ -112,5 +122,3 @@
   padding: 4px 0 4px 0;
   margin-left: -2px;
 }
-
-
