--- a/src/app/examples-page/examples-page.component.html
+++ b/src/app/examples-page/examples-page.component.html
@@ -51,6 +51,6 @@
                  [allowClear]="true"
     >
     </ng-selectio>
-    <div>{{itemArray}}</div>
+    <div class="selected-item">{{itemArray}}</div>
   </div>
 </div>
