--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
-@import 'app/ng-selectio/ng-selectio.css';
-
-
+/* You can add global styles to this file, and also import other style files */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400');
